--- a/assets/dragonwell.css
+++ b/assets/dragonwell.css
@@ -933,7 +933,7 @@ ul  {
     }
     
     .csnav li {
-        margin: 40px 17px;
+        margin: 40px 16px;
     }
     
     .sticky {
@@ -953,6 +953,10 @@ ul  {
     
     .back {
        margin-bottom: 80px;
+    }
+    
+     .contact li {
+        margin: 0px 9px;
     }
 
 }
@@ -1043,7 +1047,7 @@ ul  {
     
     .sticky li {
         margin-left: 0px;
-        margin-right: 70px;
+        margin-right: 68px;
         margin-bottom: 0px;
         margin-top: 0px;
         
@@ -1307,7 +1311,7 @@ ul  {
     }
     
     .csnav li {
-       margin: 30px 25px;
+       margin: 30px 22px;
      }
     
     .sticky ul {
