--- a/assets/dyz.css
+++ b/assets/dyz.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    margin: 90px 100px 50px;
+    
     font-family: "helvetica neue", helvetica, arial, sans-serif;
 } 
 
@@ -62,6 +62,7 @@ ul  {
 
 
 .container {
+    margin: 90px 100px 50px;
     display: grid;
     grid-gap: 0px 40px;
     grid-template-columns: repeat(12, 1fr);
@@ -73,8 +74,11 @@ ul  {
         ". . . . resume resume resume resume . . . ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
-        ". . . samp samp samp samp samp samp . . ."
         ". . . veolist veolist veolist veolist veolist veolist . . ."
+        "slogo slogo slogo slogo slogo slogo slogo slogo slogo slogo slogo slogo"
+        ". tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo ."
+        "guide guide guide guide guide guide guide guide guide guide guide guide"
+        ". . . bos bos bos bos bos bos . . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
@@ -82,54 +86,33 @@ ul  {
 .header {
     
     grid-area: header;
+    line-height: 120%;
     text-align: center;
     font-size: 48px;
-    margin-top: 150px;
+    color: #43322A;
+    margin-top: 100px;
     letter-spacing: -1px;
 }
-.headshot {
-    grid-area: headshot;
 
-}
+
+
 
 .headshot img {
-    margin-top: 30px;
-    width: 110%;
-    margin-left: -5%;
-}
+    margin-top: 70px;
+    width: 100%;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 
-.mocks {
-    margin-top: 60px;
-    grid-area: mocks;
-    overflow: hidden;
     
 }
 
-.mocks img {
-    width: 50%;
-    margin-right: -27%;
-}
 
-.mocks img:nth-child(1){
-    margin-left: -10%;
-}
 
 
 
 p {
     margin: 0;
-    
 }
 
-.mocks p {
-       font-weight: 200;
-       line-height: 135%;
-       font-size: 18px;
-       text-align: center;
-       letter-spacing: .4px;
-       margin: 2% 28% 0;
-
-}
 
 .position {  
     font-size: 22px;
@@ -137,7 +120,7 @@ p {
     line-height: 160%;
     letter-spacing: .4px;
     grid-area: position;
-    margin: 91px 0px 0px;
+    margin: 70px 0px -30px;
 }
 
 .position span {
@@ -155,11 +138,83 @@ p {
     grid-area: resume;
 }
 
-.resume, .samp {
-    border: 2px solid #00b8aa;
+.resume {
+   
     border-radius: 8px;
-    background-color: #fff;
-    color: #00b8aa;
+    background-color: #00b8aa;
+    color: #fff;
+    font-size: 18px;
+    font-family: helvetica neue;    
+    font-weight: bold;
+    text-align: center;
+    line-height: 160%;
+    padding: 15px 15px 17px;
+    margin: 60px 40px 0px;
+    transition: .2s ease;
+}
+
+
+.veolist {
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 160%;
+    letter-spacing: .4px;
+    grid-area: veolist;
+    margin: 20px 0px 0px;
+}
+
+.veolist p {
+    
+    margin-bottom: 60px;
+}
+
+.veolist span {
+    font-weight: normal;
+    letter-spacing: -0.5px;
+    font-size: 28px;
+}
+
+.veolist img {
+    margin: 20px 0px;
+    width: 100%;    
+}
+
+.slogo {
+    grid-area: slogo;
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 160%;
+    letter-spacing: .4px;
+    margin: 0px 0px 0px;
+}
+
+.slogo img {
+    
+    width: 49%;
+    margin: 70px 4px;
+}
+
+.tlogo {
+    grid-area: tlogo;
+    margin-bottom: 80px;
+}
+
+.tlogo img {
+    width: 100%;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+
+}
+
+.guide {
+    grid-area: guide;
+    display: none;
+}
+
+.guide {
+    border: 2px solid #2c1352;
+    border-radius: 8px;
+    background-color: #2c1352;
+    color: #fff;
     font-size: 18px;
     font-family: helvetica neue;    
     font-weight: bold;
@@ -171,45 +226,19 @@ p {
     
 }
 
-.resume:hover, .samp:hover {
-/*  background: white;
-  color: #00b8aa; */
-    background-color: #00b8aa;
-    color: #fff;
+.guide:hover {
+    box-shadow: 4px 6px 10px rgba(0, 0, 0, 0.1);
 }
 
-.samp {
-    
-    grid-area: samp;
-    display: none;
-}
-
-
-.veolist {
+.bos {
+    grid-area: bos;
     font-size: 22px;
     font-weight: 200;
     line-height: 160%;
     letter-spacing: .4px;
-    grid-area: veolist;
-    margin: 20px 0px 200px;
+    grid-area: bos;
+    margin: 20px 0px 150px;
 }
-
-.veolist ul {
-    list-style-type: disc; 
-    font-weight: 200;
-    line-height: 160%;
-    letter-spacing: .4px;
-    margin-left: 7%;
-    grid-area: veolist;
-    font-size: 20px;
-}
-
-.veolist span {
-    font-weight: normal;
-    letter-spacing: -0.5px;
-    font-size: 28px;
-}
-
 
 .footnav {
      grid-area: footnav;
@@ -293,13 +322,12 @@ p {
 
 
 
-@media (max-width: 825px) {
+@media (max-width: 1325px) {
     
-     body {
-        margin: 50px 50px 30px;
-     }
+    
     
     .container {
+        margin: 50px 50px 30px;
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
@@ -308,8 +336,11 @@ p {
         ". . resume resume resume resume resume resume resume resume . ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
-        ". . . samp samp samp samp samp samp . . ."
         ". . veolist veolist veolist veolist veolist veolist veolist veolist . ."
+        ". . slogo slogo slogo slogo slogo slogo slogo slogo . ."
+        ". tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo ."
+        "guide guide guide guide guide guide guide guide guide guide guide guide"
+        ". . bos bos bos bos bos bos bos bos . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
@@ -319,25 +350,12 @@ p {
         
     }
     
-    .mocks p {
-            margin: 5% 10%;
-            font-size: 16px;
-    }
-    
   
     
     .logo img {
          height: 50px
          
      }
-    
-    .veolist {
-        font-size: 18px;
-    }
-    
-    .veolist ul {
-        font-size: 16px;
-    }
     
     .name {
          margin-top: 40px;
@@ -350,6 +368,12 @@ p {
  
      }
 
+  
+    
+    .slogo img {
+    width: 100%;
+    margin: 30px 0px;
+}
     
      .footlogo img {
         height: 40px;
@@ -358,23 +382,26 @@ p {
 }
 
 
-/* ------------------ Landscape smaller phones ------------------------*/
+/* ------------------ Landscape phones ------------------------*/
 
 
-@media (max-width: 670px) {
+@media (max-width: 825px) {
     
     .container {
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
-        ". . . header header header header header header . . ."
+        "header header header header header header header header header header header header"
 
         ". position position position position position position position position position position ."
         ". resume resume resume resume resume resume resume resume resume resume ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
-         ". . . samp samp samp samp samp samp . . ."
         ". veolist veolist veolist veolist veolist veolist veolist veolist veolist veolist ."
+        ". slogo slogo slogo slogo slogo slogo slogo slogo slogo slogo ."
+        ". tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo ."
+        "guide guide guide guide guide guide guide guide guide guide guide guide"
+        ". bos bos bos bos bos bos bos bos bos bos ."
         "footnav footnav footnav contact contact contact contact contact contact contact . footlogo"
     
      }
@@ -382,7 +409,7 @@ p {
     
     
     .header {
-        margin: 70px 0px 40px;
+        margin: 60px 0px 40px;
     }
     
     
@@ -391,7 +418,15 @@ p {
     }
     
     .veolist {
-        margin-bottom: 80px;
+        margin-bottom: 20px;
+    }
+    
+      .veolist, .bos, .slogo {
+        font-size: 18px;
+    }
+        
+    .veolist img {
+    margin: 10px 0px;
     }
     
   /*  .mocks img:nth-child(1) {
@@ -406,13 +441,17 @@ p {
     
 }
 
-
 @media (max-width: 568px) {
     
     .contact li {
         margin: 0px 9px;
     }
+    
 }
+    
+    
+
+
 
 
 /* ------------------ Bigger phones ------------------------*/
@@ -420,11 +459,10 @@ p {
 
 @media (max-width: 414px) {
     
-    body {
-        margin: 25px 25px 75px;
-     }
+    
     
      .container {
+        margin: 25px 25px 75px;
         grid-template-columns: repeat(6, 1fr);
         grid-gap: 0px 20px;
         grid-template-areas: 
@@ -433,9 +471,12 @@ p {
         "position position position position position position"
             "resume resume resume resume resume resume"
         "mocks mocks mocks mocks mocks mocks"
-        "headshot headshot headshot headshot headshot headshot"
-        "samp samp samp samp samp samp"
+        "headshot headshot headshot headshot headshot headshot "
         "veolist veolist veolist veolist veolist veolist"
+        "slogo slogo slogo slogo slogo slogo"
+        "tlogo tlogo tlogo tlogo tlogo tlogo"
+        "guide guide guide guide guide guide"
+        "bos bos bos bos bos bos"
         "contact contact contact contact contact contact"
         ". . footlogo footlogo . ."
     
@@ -444,37 +485,43 @@ p {
     
     
     .headshot img {
-        display: none;
-        margin-top: 50px;
+        margin-top: 40px;
     }  
     
     .position {
-         margin: 10px 0px 0px;
+         margin: 10px 0px -70px;
         
     }
     
-    .resume {
-        
-        margin: 33px 5px -40px;
+    .veolist {
+    margin-bottom: 0px;
+}
+    
+    .veolist p {
+    margin-bottom: 30px;
+}
+     
+    .slogo {
+        margin-bottom: 10px;
     }
     
-    .samp {
+    .slogo img {
+        width: 100%;
+        margin: 10px 0px;
+}
+    
+    .tlogo {
+        display: none;
+        margin-bottom: 30px;
+    }
+    
+    .guide {
         display: block;
         margin: 25px 5px 20px;
     }
     
-    .mocks img {
-        
-        width: 220%;
-        margin: -8% -60%;
-    }
-    
-    .mocks img:nth-child(1) {
-        margin-left: -60%;
-    }
-    
-    .mocks p {
-            margin: 2% 0 0;
+    .bos {
+        margin-bottom: 60px;
     }
     
      .footnav {
@@ -500,7 +547,7 @@ p {
 
 @media (max-width: 320px) {
     
-   
+    
     
     .contact li {
        margin: 0px 8px;
