--- a/assets/orion.css
+++ b/assets/orion.css
@@ -1023,7 +1023,7 @@ ul  {
         margin: 40px 0px 30px;
     }
     .csnav li {
-    margin: 40px 17px;
+    margin: 40px 16px;
 }
     
     .sticky {
@@ -1048,6 +1048,9 @@ ul  {
        margin-bottom: 80px;
     }
     
+     .contact li {
+        margin: 0px 9px;
+    }
 }
 
 
@@ -1141,7 +1144,7 @@ ul  {
     }
     
     .csnav li {
-        margin: 40px 30px;
+        margin: 40px 25px;
     }
     
     .sticky {
@@ -1154,7 +1157,7 @@ ul  {
     
     .sticky li {
         margin-left: 0px;
-        margin-right: 70px;
+        margin-right: 68px;
         margin-bottom: 0px;
         margin-top: 0px;
         font-size: 16px;
@@ -1438,7 +1441,7 @@ ul  {
     }
     
     .csnav li {
-       margin: 30px 25px;
+       margin: 30px 22px;
      }
     
     
