--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -75,6 +75,10 @@ ul  {
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
         ". . . veolist veolist veolist veolist veolist veolist . . ."
+        ". . . slogo slogo slogo slogo slogo slogo . . ."
+        ". tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo ."
+        "guide guide guide guide guide guide guide guide guide guide guide guide"
+        ". . . bos bos bos bos bos bos . . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
         
 }
@@ -82,16 +86,18 @@ ul  {
 .header {
     
     grid-area: header;
+    line-height: 120%;
     text-align: center;
     font-size: 48px;
-    margin-top: 150px;
+    margin-top: 100px;
+    letter-spacing: -1px;
 }
 
 
 
 
 .headshot img {
-    margin-top: 70px;
+    margin: 70px 0 0px;
     width: 100%;
     
 }
@@ -111,7 +117,7 @@ p {
     line-height: 160%;
     letter-spacing: .4px;
     grid-area: position;
-    margin: 91px 0px 0px;
+    margin: 70px 0px -30px;
 }
 
 .position span {
@@ -132,8 +138,8 @@ p {
 .resume {
    
     border-radius: 8px;
-    background-color: #00b8aa;
-    color: #fff;
+    background-color: white;
+    color: #00b8aa;
     font-size: 18px;
     font-family: helvetica neue;    
     font-weight: bold;
@@ -151,7 +157,7 @@ p {
     line-height: 160%;
     letter-spacing: .4px;
     grid-area: veolist;
-    margin: 20px 0px 200px;
+    margin: 20px 0px 0px;
 }
 
 .veolist ul {
@@ -170,6 +176,72 @@ p {
     font-size: 28px;
 }
 
+.veolist img {
+    margin: 60px 0px;
+    width: 100%;    
+}
+
+.slogo {
+    grid-area: slogo;
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 160%;
+    letter-spacing: .4px;
+    margin: 0px 0px 90px;
+}
+
+.slogo img {
+    
+    width: 30%;
+    margin: 70px 35% 0;
+}
+
+.tlogo {
+    grid-area: tlogo;
+    margin-bottom: 80px;
+}
+
+.tlogo img {
+    width: 100%;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+
+}
+
+.guide {
+    grid-area: guide;
+    display: none;
+}
+
+.guide {
+    border: 2px solid #2c1352;
+    border-radius: 8px;
+    background-color: #fff;
+    color: #2c1352;
+    font-size: 18px;
+    font-family: helvetica neue;    
+    font-weight: bold;
+    text-align: center;
+    line-height: 160%;
+    padding: 13px 15px 15px;
+    margin: 60px 40px 0px;
+    transition: .2s ease;
+    
+}
+
+.guide:hover {
+     background-color: #2c1352;
+     color: #fff;
+}
+
+.bos {
+    grid-area: bos;
+    font-size: 22px;
+    font-weight: 200;
+    line-height: 160%;
+    letter-spacing: .4px;
+    grid-area: bos;
+    margin: 20px 0px 150px;
+}
 
 .footnav {
      grid-area: footnav;
@@ -253,13 +325,12 @@ p {
 
 
 
-@media (max-width: 825px) {
+@media (max-width: 1200px) {
     
-     body {
-        margin: 50px 50px 30px;
-     }
+    
     
     .container {
+        margin: 50px 50px 30px;
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
@@ -269,6 +340,10 @@ p {
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
         ". . veolist veolist veolist veolist veolist veolist veolist veolist . ."
+        ". . slogo slogo slogo slogo slogo slogo slogo slogo . ."
+        ". tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo ."
+        "guide guide guide guide guide guide guide guide guide guide guide guide"
+        ". . bos bos bos bos bos bos bos bos . ."
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
@@ -296,6 +371,9 @@ p {
  
      }
 
+    .veolist, .bos, .slogo {
+        font-size: 18px;
+    }
     
      .footlogo img {
         height: 40px;
@@ -313,13 +391,17 @@ p {
         grid-gap: 0px 20px;
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
-        ". . . header header header header header header . . ."
+        "header header header header header header header header header header header header"
 
         ". position position position position position position position position position position ."
         ". resume resume resume resume resume resume resume resume resume resume ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
         ". veolist veolist veolist veolist veolist veolist veolist veolist veolist veolist ."
+        ". slogo slogo slogo slogo slogo slogo slogo slogo slogo slogo ."
+        ". tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo tlogo ."
+        "guide guide guide guide guide guide guide guide guide guide guide guide"
+        ". bos bos bos bos bos bos bos bos bos bos ."
         "footnav footnav footnav contact contact contact contact contact contact contact . footlogo"
     
      }
@@ -327,7 +409,7 @@ p {
     
     
     .header {
-        margin: 70px 0px 40px;
+        margin: 60px 0px 40px;
     }
     
     
@@ -336,7 +418,7 @@ p {
     }
     
     .veolist {
-        margin-bottom: 80px;
+        margin-bottom: 20px;
     }
     
   /*  .mocks img:nth-child(1) {
@@ -358,11 +440,10 @@ p {
 
 @media (max-width: 414px) {
     
-    body {
-        margin: 35px 35px 75px;
-     }
+    
     
      .container {
+        margin: 25px 25px 75px;
         grid-template-columns: repeat(6, 1fr);
         grid-gap: 0px 20px;
         grid-template-areas: 
@@ -373,6 +454,10 @@ p {
         "mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot "
         "veolist veolist veolist veolist veolist veolist"
+        "slogo slogo slogo slogo slogo slogo"
+        "tlogo tlogo tlogo tlogo tlogo tlogo"
+        "guide guide guide guide guide guide"
+        "bos bos bos bos bos bos"
         "contact contact contact contact contact contact"
         ". . footlogo footlogo . ."
     
@@ -381,12 +466,40 @@ p {
     
     
     .headshot img {
-        margin-top: 50px;
+        margin-top: -20px;
     }  
     
     .position {
          margin: 10px 0px 0px;
         
+    }
+    
+    .veolist {
+    margin-bottom: 0px;
+}
+     
+    .slogo {
+        margin-bottom: 10px;
+    }
+    
+    .slogo img {
+        
+    width: 60%;
+    margin: 40px 20% 0;
+}
+    
+    .tlogo {
+        display: none;
+        margin-bottom: 30px;
+    }
+    
+    .guide {
+        display: block;
+        margin: 25px 5px 20px;
+    }
+    
+    .bos {
+        margin-bottom: 60px;
     }
     
      .footnav {
@@ -412,9 +525,7 @@ p {
 
 @media (max-width: 320px) {
     
-    body {
-        margin: 25px 25px 75px;
-     }
+    
     
     .contact li {
        margin: 0px 8px;
