--- a/assets/veo.css
+++ b/assets/veo.css
@@ -70,6 +70,7 @@ ul  {
         "logo . . . . . . . . nav nav nav"
         ". header header header header header header header header header header ."
         ". . . position position position position position position . . ."
+        "l1 l1 l1 l2 l2 l2 l3 l3 l3 l4 l4 l4"
         ". . . . resume resume resume resume . . . ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
@@ -123,7 +124,7 @@ p {
 
 .mocks p {
        font-weight: 200;
-       line-height: 135%;
+       line-height: 140%;
        font-size: 18px;
        text-align: center;
        letter-spacing: .4px;
@@ -151,6 +152,35 @@ p {
     border-bottom: 3px solid #00b8aa; 
 }
 
+.l1, .l2, .l3, .l4 {
+    list-style-type: disc;
+    margin: 25% -5% 15% 5%;
+    font-weight: normal;
+    font-size: 22px;
+    color: #2c4e6d;
+    line-height: 160%;
+    letter-spacing: -.4px;
+}
+
+.l1 {
+    grid-area: l1;
+    
+}
+
+.l2 {
+    grid-area: l2;
+}
+
+.l3 {
+    grid-area: l3;
+}
+
+.l4 {
+    grid-area: l4;   
+}
+
+
+
 .resume {
     grid-area: resume;
 }
@@ -166,7 +196,7 @@ p {
     text-align: center;
     line-height: 160%;
     padding: 13px 15px 15px;
-    margin: 60px 40px 0px;
+    margin: 30px 40px 0px;
     transition: .2s ease;
     
 }
@@ -293,7 +323,7 @@ p {
 
 
 
-@media (max-width: 825px) {
+@media (max-width: 1024px) {
     
      body {
         margin: 50px 50px 30px;
@@ -305,6 +335,8 @@ p {
         "logo . . . . . . . . nav nav nav"
         ". header header header header header header header header header header ."
         ". . position position position position position position position position . ."
+          "l1 l1 l1 l1 l1 l1 l2 l2 l2 l2 l2 l2" 
+        "l3 l3 l3 l3 l3 l3 l4 l4 l4 l4 l4 l4"
         ". . resume resume resume resume resume resume resume resume . ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
@@ -313,6 +345,12 @@ p {
         "footnav footnav footnav contact contact contact contact contact contact . . footlogo"
     
      }
+    
+     .l1, .l2, .l3, .l4 {
+        margin: 10% 5% 0% 10%;
+        font-size: 20px;
+        
+    }
     
     .mocks {
     margin-top: 60px;
@@ -349,6 +387,10 @@ p {
          font-size: 20px;
  
      }
+    
+    .resume {
+        margin: 50px 40px -30px;
+    }
 
     
      .footlogo img {
@@ -368,8 +410,10 @@ p {
         grid-template-areas: 
         "logo . . . . . . . . nav nav nav"
         ". . . header header header header header header . . ."
-
+        
         ". position position position position position position position position position position ."
+            "l1 l1 l1 l1 l1 l1 l2 l2 l2 l2 l2 l2" 
+        "l3 l3 l3 l3 l3 l3 l4 l4 l4 l4 l4 l4"
         ". resume resume resume resume resume resume resume resume resume resume ."
         "mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot headshot"
@@ -389,6 +433,8 @@ p {
     .position {
         margin-top: 0;
     }
+    
+    
     
     .veolist {
         margin-bottom: 80px;
@@ -431,7 +477,12 @@ p {
         "logo nav nav nav nav nav"
         "header header header header header header"
         "position position position position position position"
+                "l1 l1 l1 l1 l1 l1"
+        "l2 l2 l2 l2 l2 l2"
+        "l3 l3 l3 l3 l3 l3"
+        "l4 l4 l4 l4 l4 l4"
             "resume resume resume resume resume resume"
+    
         "mocks mocks mocks mocks mocks mocks"
         "headshot headshot headshot headshot headshot headshot"
         "samp samp samp samp samp samp"
@@ -452,6 +503,8 @@ p {
          margin: 10px 0px 0px;
         
     }
+    
+   
     
     .resume {
         
