--- a/assets/jams.css
+++ b/assets/jams.css
@@ -333,7 +333,7 @@ p {
     
     
      .container {
-        margin: 25px 25px 75px;
+        margin: 35px 35px 75px;
         grid-template-columns: repeat(6, 1fr);
         grid-gap: 0px 20px;
         grid-template-areas: 
@@ -363,6 +363,11 @@ p {
         margin: 14% 10% 0;
     }
     
+      .contact li {
+
+    margin: 0px 12px;
+}
+    
      .footnav {
         display: none;
     }
@@ -386,6 +391,9 @@ p {
 
 @media (max-width: 320px) {
     
+     .container {
+        margin: 25px 25px 75px;
+    }
     
     
     .contact li {
