--- a/assets/portfolio.css
+++ b/assets/portfolio.css
@@ -421,6 +421,11 @@ p {
         margin-bottom: 20px;
     }
     
+    .contact li {
+    
+    margin: 0px 8px;
+}
+    
   /*  .mocks img:nth-child(1) {
     margin-left: -21%;
 }
@@ -443,7 +448,7 @@ p {
     
     
      .container {
-        margin: 25px 25px 75px;
+        margin: 35px 35px 75px;
         grid-template-columns: repeat(6, 1fr);
         grid-gap: 0px 20px;
         grid-template-areas: 
@@ -502,6 +507,11 @@ p {
         margin-bottom: 60px;
     }
     
+    .contact li {
+
+    margin: 0px 12px;
+}
+    
      .footnav {
         display: none;
     }
@@ -525,6 +535,9 @@ p {
 
 @media (max-width: 320px) {
     
+     .container {
+        margin: 25px 25px 75px;
+    }
     
     
     .contact li {
