--- a/assets/showbuddy.css
+++ b/assets/showbuddy.css
@@ -1345,6 +1345,11 @@ ul  {
     
     }
     
+      .contact li {
+
+    margin: 0px 12px;
+}
+    
     .footnav {
         display: none;
     }
