--- a/assets/style.css
+++ b/assets/style.css
@@ -1105,6 +1105,12 @@ p {
     .contact {
         margin-top: 30px;
     }
+    
+      .contact li {
+
+    margin: 0px 12px;
+}
+    
     .footnav {
         display: none;
     }
